php/include/pdf_oxide.h

typedef struct DocumentEditor DocumentEditor;
typedef struct FfiBarcodeImage FfiBarcodeImage;
typedef struct FfiPdfAResults FfiPdfAResults;
typedef struct FfiPdfXResults FfiPdfXResults;
typedef struct FfiSignatureInfo FfiSignatureInfo;
typedef struct FfiSignatureInfo FfiSignatureInfo;
typedef struct FfiUaResults FfiUaResults;
typedef struct PdfDocument PdfDocument;
FfiBarcodeImage *pdf_generate_qr_code(const char *data,
                                      int32_t error_correction,
                                      int32_t size_px,
                                      int32_t *error_code);
FfiBarcodeImage *pdf_generate_barcode(const char *data,
                                      int32_t format,
                                      int32_t size_px,
                                      int32_t *error_code);
uint8_t *pdf_barcode_get_image_png(const FfiBarcodeImage *barcode_handle,
                                   int32_t _size_px,
                                   int32_t *out_len,
                                   int32_t *error_code);
char *pdf_barcode_get_svg(const FfiBarcodeImage *barcode_handle,
                          int32_t _size_px,
                          int32_t *error_code);
int32_t pdf_add_barcode_to_page(DocumentEditor *document_handle,
                                int32_t page_index,
                                const FfiBarcodeImage *barcode_handle,
                                float x,
                                float y,
                                float width,
                                float height,
                                int32_t *error_code);
void pdf_barcode_free(FfiBarcodeImage *handle);
void *pdf_certificate_load_from_bytes(const uint8_t *cert_bytes,
                                      int32_t cert_len,
                                      const char *password,
                                      int32_t *error_code);
int32_t pdf_document_sign(void *document_handle,
                          const void *certificate_handle,
                          const char *reason,
                          const char *location,
                          int32_t *error_code);
void *pdf_document_get_signature(const void *document_handle, int32_t index, int32_t *error_code);
int32_t pdf_signature_verify(const void *signature_handle, int32_t *error_code);
void pdf_signature_free(FfiSignatureInfo *handle);
void pdf_certificate_free(void *handle);
FfiUaResults *pdf_validate_pdf_ua(PdfDocument *document, int32_t level, int32_t *error_code);
bool pdf_pdf_ua_is_accessible(const FfiUaResults *results, int32_t *error_code);
int32_t pdf_pdf_ua_error_count(const FfiUaResults *results);
char *pdf_pdf_ua_get_error(const FfiUaResults *results, int32_t index, int32_t *error_code);
void pdf_pdf_ua_results_free(FfiUaResults *results);
bool pdf_document_has_xfa(PdfDocument *handle);
bool pdf_convert_to_pdf_a(PdfDocument *document, int32_t level, int32_t *error_code);
bool pdf_pdf_a_is_compliant(const FfiPdfAResults *results, int32_t *error_code);
int32_t pdf_pdf_a_error_count(const FfiPdfAResults *results);
char *pdf_pdf_a_get_error(const FfiPdfAResults *results, int32_t index, int32_t *error_code);
int32_t pdf_pdf_a_warning_count(const FfiPdfAResults *results);
void pdf_pdf_a_results_free(FfiPdfAResults *results);
bool pdf_pdf_x_is_compliant(const FfiPdfXResults *results, int32_t *error_code);
int32_t pdf_pdf_x_error_count(const FfiPdfXResults *results);
char *pdf_pdf_x_get_error(const FfiPdfXResults *results, int32_t index, int32_t *error_code);
void pdf_pdf_x_results_free(FfiPdfXResults *results);
void *pdf_ocr_engine_create(const char *det_model_path,
                            const char *rec_model_path,
                            const char *dict_path,
                            int32_t *error_code);
bool pdf_ocr_page_needs_ocr(PdfDocument *doc, int32_t page_index, int32_t *error_code);
char *pdf_ocr_extract_text(PdfDocument *doc,
                           int32_t page_index,
                           const void *engine,
                           int32_t *error_code);