ruby/lib/pdf_oxide/ffi/bindings.rb


      # REMOVED phantom (no upstream symbol): :pdf_cache_clear (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_cache_invalidate_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_cache_get_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_cache_set_max_size (1 line)

      # ============================================================
      # ANALYSIS OPERATIONS (10 functions)
      # ============================================================

      # ============================================================
      # CONVERSION OPERATIONS (10 functions)
      # ============================================================

      # ============================================================
      # XFA FORM OPERATIONS (12 functions)
      # ============================================================

      attach_function :pdf_document_has_xfa, [:pointer, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_parse_xfa_form (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_field_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_get_field (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_get_name (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_get_dataset (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_dataset_to_xml (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_dataset_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_convert_xfa_to_acroform (1 line)

      # ============================================================
      # ANALYSIS/ML OPERATIONS (12 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_analyze_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_complexity (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_complexity_score (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_content_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_text_density (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_image_density (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_result_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analyze_document (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_estimate_processing_time (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_detect_columns (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_detect_tables (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ml_get_status (1 line)

      # ============================================================
      # ADDITIONAL RENDERING OPERATIONS (15 functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_create (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_set_options (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_page_renderer_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_get_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_renderer_reset_statistics (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_rendered_image_convert (1 line)

      # ============================================================
      # ADDITIONAL OCR OPERATIONS (12 functions)
      # ============================================================

      attach_function :pdf_ocr_engine_create, [:pointer, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_ocr_engine_get_version (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_engine_get_status (1 line)
      attach_function :pdf_ocr_page_needs_ocr, [:pointer, :int32, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_ocr_detect_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_recognize_page (1 line)
      attach_function :pdf_ocr_extract_text, [:pointer, :int32, :pointer, :bool, :pointer], :string
      # REMOVED phantom (no upstream symbol): :pdf_ocr_extract_spans (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_extract_pages (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_get_text (1 line)

      # ============================================================
      # OCR RESULT ACCESSORS (6 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_average_confidence (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_results_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_get_char_confidence (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_get_bbox (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_span_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_ocr_batch_results_get_page (1 line)

      # ============================================================
      # CERTIFICATE AND SIGNATURE OPERATIONS (8 functions)
      # ============================================================

      attach_function :pdf_document_get_signature, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_signature_free, [:pointer], :void
      attach_function :pdf_certificate_load_from_bytes, [:pointer, :size_t, :string, :pointer], :pointer
      attach_function :pdf_certificate_free, [:pointer], :void
      attach_function :pdf_document_sign, [:pointer, :pointer, :string, :string, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_signer (1 line)
      attach_function :pdf_signature_verify, [:pointer, :pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_compliance_issue_free (1 line)

      # ============================================================
      # COMPLIANCE RESULT ACCESSORS (12 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_validate_pdf_a (1 line)
      attach_function :pdf_pdf_a_is_compliant, [:pointer], :bool
      attach_function :pdf_pdf_a_error_count, [:pointer], :int32
      attach_function :pdf_pdf_a_warning_count, [:pointer], :int32
      attach_function :pdf_pdf_a_get_error, [:pointer, :int32, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_pdf_a_get_warning (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_a_get_report (1 line)
      attach_function :pdf_pdf_a_results_free, [:pointer], :void
      # REMOVED phantom (no upstream symbol): :pdf_validate_pdf_x (1 line)
      attach_function :pdf_pdf_x_is_compliant, [:pointer], :bool
      attach_function :pdf_pdf_x_error_count, [:pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_warning_count (1 line)

      # ============================================================
      # PDF/X RESULT ACCESSORS (6 functions)
      # ============================================================

      attach_function :pdf_pdf_x_get_error, [:pointer, :int32, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_get_warning (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_get_report (1 line)
      attach_function :pdf_pdf_x_results_free, [:pointer], :void
      attach_function :pdf_validate_pdf_ua, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_pdf_ua_is_accessible, [:pointer], :bool

      # ============================================================
      # PDF/UA RESULT ACCESSORS (4 functions)
      # ============================================================

      attach_function :pdf_pdf_ua_error_count, [:pointer], :int32
      attach_function :pdf_pdf_ua_get_error, [:pointer, :int32, :pointer], :pointer
      attach_function :pdf_pdf_ua_results_free, [:pointer], :void
      attach_function :pdf_convert_to_pdf_a, [:pointer, :int32, :pointer], :bool

      # ============================================================
      # CONVERSION OPERATIONS (4 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_convert_to_pdf_x (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_convert_to_pdf_ua (1 line)

      # ============================================================
      # BARCODE OPERATIONS (7 functions)
      # ============================================================

      attach_function :pdf_generate_qr_code, [:string, :int32, :pointer], :pointer
      attach_function :pdf_generate_barcode, [:int32, :string, :pointer], :pointer
      attach_function :pdf_barcode_get_image_png, [:pointer, :int32, :pointer, :pointer], :pointer
      attach_function :pdf_barcode_get_svg, [:pointer, :int32, :pointer], :string
      attach_function :pdf_barcode_free, [:pointer], :void
      attach_function :pdf_add_barcode_to_page, [:pointer, :int32, :pointer, :float, :float, :float, :float, :pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_ml_model_available (1 line)

      # ============================================================
      # STRATEGY AND EXTRACTION (6 functions)
      # ============================================================

      # REMOVED phantom (no upstream symbol): :pdf_create_extraction_strategy (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_get_description (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_recommends_ocr (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_strategy_free (1 line)

      # ============================================================
      # ADDITIONAL TEXT OPERATIONS (12 functions)
      # ============================================================

      # ============================================================
      # ADDITIONAL HELPER FUNCTIONS (60+ functions)
      # ============================================================

      # Links and embedded files

      # Font usage

      # Barcodes

      # Analysis

      # Document analysis

      # Signatures

      # Signature verification

      # Certificates

      # XFA forms

      # Cache

      # Text extraction all pages

      # Document rendering utilities

      # ML functions

      # Additional document methods

      # ============================================================
      # MISSING REAL RUST FUNCTIONS (73 total) - NOW ADDED
      # ============================================================
